--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./img/logo.svg" alt="">
+    </header>
+    <main>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
