--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="./img/logo.svg" alt="">
+        <a href="./index.html">
+            <img src="./img/logo.svg" alt="лого сайта">
+        </a>
+        
     </header>
     <main>
         <section></section>
