--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">
-            <img src="./img/logo.svg" alt="лого сайта">
-        </a>
+        <nav>
+            <a href="./index.html">
+                <img src="./img/logo.svg" alt="лого сайта">
+            </a>
+            <ul>
+                <li><a href="">О нас</a></li>
+                <li><a href="">Услуги и цены</a></li>
+                <li><a href="">Мастера</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
         
+        <a href="tel:+380441111111">+38 044 111 11 11</a>
+        <button type="button">онлайн-запись</button>
     </header>
     <main>
         <section></section>
