--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BarberShop</title>
 </head>
 <body>
+    <!-- header -->
     <header>
         <nav>
             <a href="./index.html">
@@ -24,7 +25,16 @@
         <button type="button">онлайн-запись</button>
     </header>
     <main>
-        <section></section>
+        <section>
+            <ul>
+                <li><a href="" target="_blank">Instagram</a></li>
+                <li><a href="" target="_blank">Youtube</a></li>
+            </ul>
+            <p lang="en">A hair salon for men in Kyiv</p>
+            <h1 lang="en">BarberShop</h1>
+            <p>Мы эксперты в модных мужских стрижках.
+            Работаем быстро, осторожно и со вкусом.</p>
+        </section>
     </main>
     <footer></footer>
 </body>
