--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
             <p>Мы эксперты в модных мужских стрижках.
             Работаем быстро, осторожно и со вкусом.</p>
         </section>
+        <section>
+            <ul>
+                <li><img
+                     src="./img/about-img-1.jpg" 
+                     alt="барбер бриє шию"
+                     width: 270px
+                     height: 445px>
+                </li>
+                <li><img
+                     src="./img/about-img-2.jpg" 
+                     alt="барбер бриє потилицю"
+                     width: 270px
+                     height: 445px>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <p>О НАС</p>
+            <h2>Лучший Барбершоп
+            твоего города</h2>
+            <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
+            <p>Мы команда, которая никогда не останавливается на достигнутом
+            и жаждет перемен. И когда ты попадешь в руки нашего мастера,
+            то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами 
+            "на одной волне". Поэтому, мы всегда
+            готовы усовершенствовать каждого, кто к нам приходит!</p>
+            <button type="button">онлайн-запись</button>
+        </section>
     </main>
     <footer></footer>
 </body>
