--- a/index.html
+++ b/index.html
@@ -63,6 +63,128 @@
             готовы усовершенствовать каждого, кто к нам приходит!</p>
             <button type="button">онлайн-запись</button>
         </section>
+        <section>
+            <p>Проведи время в компании лучших мастеров</p>
+            <h2>Услуги и цены</h2>
+            <ul>
+                <li>
+                    <p>Мужская стрижка</p>
+                    <p>от 300 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка бороды</p>
+                    <p>от 200 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка усов</p>
+                    <p>от 200 грн.</p>
+                </li>
+                <li>
+                    <p>Бритье опасной бритвойот</p>
+                    <p>от 200 грн.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Cтрижка у стажера</p>
+                    <p>от 50 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка под насадку</p>
+                    <p>от 200 грн.</p>
+                </li>
+                <li>
+                    <p>Детская стрижка (до 12 лет)</p>
+                    <p>от 300 грн.</p>
+                </li>
+                <li>
+                    <p>Камуфлирование седины</p>
+                    <p>от 200 грн.</p>
+                </li>
+            </ul>
+            <button type="button">онлайн-запись</button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <span>600</span>
+                    <p>Довольных клиентов в день</p>
+                </li>
+                <li>
+                    <span>50</span>
+                    <p>Наград за отличный сервис</p>
+                </li>
+                <li>
+                    <span>20</span>
+                    <p>Лучших мастеров Киева</p>
+                </li>
+                <li>
+                    <span>100</span>
+                    <p>Подарков постоянным клиентам</p>
+                </li>
+            </ul>
+            <p>старая традиционная школа</p>
+            <h2>Почему приходят именно к нам?</h2>
+            <p>О нас говорят только хорошее. 
+               Но лучше 1 раз увидеть и прочувствовать,
+               чем 10 раз прочитать.</p>
+        </section>
+        <section>
+            <p>для настоящих ценителей атмосферы</p>
+            <h2>Наши мастера</h2>
+            <ul>
+                <li>
+                    <img src="./img/masters-img1.jpg"
+                         alt="Extreme Barber"
+                         width="370px"
+                         height="346">
+                         
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./img/masters-img2.jpg"
+                         alt="Extreme Barber"
+                         width="370px"
+                         height="346">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./img/masters-img3.jpg"
+                         alt="Extreme Barber"
+                         width="370px"
+                         height="346">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <p>На латинском языке “барба” означает “борода”</p>
+            <ul>
+                <li><img src="./img/barber-img1.jpg"
+                         alt="barber"
+                         width="270px"
+                         height="360">
+                </li>
+                <li><img src="./img/barber-img2.jpg"
+                         alt="barber"
+                         width="270px"
+                         height="360">
+                </li>
+                <li><img src="./img/barber-img3.jpg"
+                         alt="barber"
+                         width="270px"
+                         height="360">
+                </li>
+                <li><img src="./img/barber-img4.jpg"
+                         alt="barber"
+                         width="270px"
+                         height="360">
+                </li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
 </body>
