--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         </section>
         <section>
             <p>На латинском языке “барба” означает “борода”</p>
+            <h2 hidden>галерея</h2>
             <ul>
                 <li><img src="./img/barber-img1.jpg"
                          alt="barber"
@@ -185,7 +186,32 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Онлайн-запись</h2>
+        </section>
+        <section>
+            <h2>Контакты</h2>
+            <address>
+                <ul>
+                    <li><a href="https://goo.gl/maps/2zhERRASNoLsWh84A" 
+                        target="_blank" 
+                        rel="noopener noreferrer">ул. Васильковская, 7А Киев, 08132
+                        </a>
+                    </li>
+                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                </ul>
+            </address>
+            <b>время работы</b>
+            <p>Ежедневно с 9:00 до 22:00</p>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy; Copyright 2020</p>
+        <ul>
+            <li><a href="" target="_blank">Instagram</a></li>
+            <li><a href="" target="_blank">Youtube</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
